--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pyarrow==20.0.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
+rank-bm25==0.2.2
 regex==2024.11.6
 requests==2.32.3
 scikit-learn==1.7.0
